force-app/volunteers/objects/VolunteerActivityAssignment__c/VolunteerActivityAssignment__c.object-meta.xml
<CustomObject>
    <label>Volunteer Activity Assignment</label>
    <nameField>
        <displayFormat>ActivityAssignment-{0000}</displayFormat>
        <label>Volunteer Activity Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Activity Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>