force-app/volunteers/objects/VolunteerActivityAssignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(NOT(ISBLANK(TEXT(Status__c))), CONTAINS($CustomMetadata.AssignmentStatusMapping__mdt.VolunteerActivityAssignmentStatus.ActiveValues__c,  TEXT(Status__c)))</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>