force-app/volunteers/objects/VolunteerActivityAssignment__c/fields/VolunteerAccount__c.field-meta.xml
<CustomField>
    <fullName>VolunteerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Activity Assignments</relationshipLabel>
    <relationshipName>VolunteerActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>