force-app/volunteers/objects/VolunteerActivityAssignment__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Activity</label>
    <referenceTo>VolunteerActivity__c</referenceTo>
    <relationshipLabel>Volunteer Activity Assignments</relationshipLabel>
    <relationshipName>VolunteerActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>