force-app/volunteers/objects/VolunteerActivityAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VolunteerActivity__c</columns>
    <columns>VolunteerContact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>